--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lorem-ipsum": "^1.4.9"
   },
   "devDependencies": {
     "@types/node": "^16.4.7",
