--- a/web/package.json
+++ b/web/package.json
@@ -17,14 +17,16 @@
     "graphql": "^15.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-lorem-ipsum": "^1.4.9"
+    "react-lorem-ipsum": "^1.4.9",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.7",
-    "@types/react": "^17.0.15",
+    "@types/react": "17.0.5",
+    "@types/react-dom": "17.0.9",
     "@types/webpack-env": "^1.16.2",
     "faker": "^5.5.3",
-    "typescript": "^4.3.2",
+    "typescript": "4.1.2",
     "webpack-env": "^0.8.0"
   }
 }
