--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.1",
+    "@changesets/cli": "^2.16.0",
     "astro": "^0.18.8",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
