--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "debug": "DEBUG=* astro dev",
+    "test": "uvu -r ts-node/register",
     "graphql": "cd apollo; npm start;"
   },
   "dependencies": {
@@ -25,8 +26,12 @@
     "@types/react": "17.0.5",
     "@types/react-dom": "17.0.9",
     "@types/webpack-env": "^1.16.2",
+    "chai": "^4.3.4",
     "faker": "^5.5.3",
+    "sinon": "^11.1.2",
+    "ts-node": "^10.2.1",
     "typescript": "4.1.2",
+    "uvu": "^0.5.1",
     "webpack-env": "^0.8.0"
   }
 }
