--- a/web/package.json
+++ b/web/package.json
@@ -6,12 +6,14 @@
     "dev": "astro dev",
     "build": "astro build",
     "debug": "DEBUG=* astro dev",
-    "test": "uvu -r ts-node/register",
+    "test": "uvu -r esbuild-register ",
     "graphql": "cd apollo; npm start;"
   },
   "dependencies": {
     "@apollo/client": "^3.4.1",
     "@changesets/cli": "^2.16.0",
+    "@types/chai": "^4.2.21",
+    "@types/sinon": "^10.0.2",
     "astro": "^0.18.8",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
@@ -27,6 +29,8 @@
     "@types/react-dom": "17.0.9",
     "@types/webpack-env": "^1.16.2",
     "chai": "^4.3.4",
+    "esbuild": "^0.12.17",
+    "esbuild-register": "^3.0.0",
     "faker": "^5.5.3",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
