--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   release:
     name: Release
@@ -26,5 +29,7 @@ jobs:
 
       - name: Create Release Pull Request
         uses: changesets/action@master
+        with:
+          version: cd web && npm run version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
