--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "private": true,
   "scripts": {
+    "version": "changeset version",
     "dev": "astro dev",
     "build": "astro build",
     "debug": "DEBUG=* astro dev",
