--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Publish
 
 on:
   push:
@@ -29,7 +29,5 @@ jobs:
 
       - name: Create Release Pull Request
         uses: changesets/action@master
-        with:
-          version: cd web && npm run version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
