--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,8 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
+      - uses: abbbi/github-actions-tune@v1
+
       - name: Setup Node.js 12.x
         uses: actions/setup-node@master
         with:
