--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.1",
-    "@changesets/cli": "^2.16.0",
+    "@changesets/cli": "^2.17.0",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
-    "astro": "^0.18.8",
+    "astro": "^0.20.3",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
@@ -26,16 +26,16 @@
   },
   "devDependencies": {
     "@types/node": "^16.4.7",
-    "@types/react": "17.0.5",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "17.0.9",
     "@types/webpack-env": "^1.16.2",
     "chai": "^4.3.4",
-    "esbuild": "^0.12.17",
+    "esbuild": "^0.12.24",
     "esbuild-register": "^3.0.0",
     "faker": "^5.5.3",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
-    "typescript": "4.1.2",
+    "typescript": "^4.4.2",
     "uvu": "^0.5.1",
     "webpack-env": "^0.8.0"
   }
