--- a/web/package.json
+++ b/web/package.json
@@ -14,17 +14,25 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.17.0",
+    "@popmotion/popcorn": "^0.4.4",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
     "astro": "^0.20.3",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
+    "leva": "^0.9.13",
     "module-alias": "^2.2.2",
+    "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
+    "rehype-add-classes": "^1.0.0",
+    "rehype-toc": "^3.0.2",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-code-titles": "^0.1.2",
+    "remark-slug": "^7.0.0",
     "slugify": "^1.6.0"
   },
   "devDependencies": {
@@ -50,7 +58,7 @@
     "~": "./src"
   },
   "_astroConfig": {
-    "projectRoot": "./src",
+    "projectRoot": ".",
     "pages": "./src/pages",
     "dist": "./dist",
     "buildOptions": {
@@ -65,11 +73,29 @@
       "remarkPlugins": [
         "remark-code-titles",
         "remark-slug",
-        ["remark-autolink-headings", { "behavior": "prepend" }]
+        [
+          "remark-autolink-headings",
+          {
+            "behavior": "prepend"
+          }
+        ]
       ],
       "rehypePlugins": [
-        ["rehype-toc", { "headings": ["h3", "h4"] }],
-        ["rehype-add-classes", { "h1,h2,h3": "title" }]
+        [
+          "rehype-toc",
+          {
+            "headings": [
+              "h3",
+              "h4"
+            ]
+          }
+        ],
+        [
+          "rehype-add-classes",
+          {
+            "h1,h2,h3": "title"
+          }
+        ]
       ]
     }
   }
