--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
+    "use-between": "^0.0.18",
     "uvu": "^0.5.1",
     "webpack-env": "^0.8.0"
   },
