--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "esbuild-register": "^3.0.0",
     "faker": "^5.5.3",
     "jsdom": "^17.0.0",
+    "react-intersection-observer": "^8.32.1",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2",
