--- a/web/package.json
+++ b/web/package.json
@@ -33,7 +33,8 @@
     "remark-autolink-headings": "^7.0.1",
     "remark-code-titles": "^0.1.2",
     "remark-slug": "^7.0.0",
-    "slugify": "^1.6.0"
+    "slugify": "^1.6.0",
+    "typanion": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
