--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,9 @@
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
     "astro": "^0.20.3",
+    "canvas": "^2.8.0",
+    "cheerio": "^1.0.0-rc.10",
+    "css-select": "^4.1.3",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
@@ -49,7 +52,6 @@
     "esbuild-register": "^3.0.0",
     "faker": "^5.5.3",
     "jsdom": "^17.0.0",
-    "linkedom": "^0.11.2",
     "react-intersection-observer": "^8.32.1",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
