--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@changesets/cli": "^2.17.0",
     "@popmotion/popcorn": "^0.4.4",
+    "@silvenon/remark-smartypants": "^1.0.0",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
     "astro": "^0.20.3",
@@ -32,10 +33,13 @@
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
     "rehype-add-classes": "^1.0.0",
+    "rehype-autolink-headings": "^6.1.0",
     "rehype-toc": "^3.0.2",
     "remark-autolink-headings": "^7.0.1",
     "remark-code-titles": "^0.1.2",
+    "remark-gfm": "^2.0.0",
     "remark-slug": "^7.0.0",
+    "remark-unwrap-images": "^3.0.0",
     "slugify": "^1.6.0",
     "typanion": "^3.3.2"
   },
@@ -77,29 +81,24 @@
     ],
     "markdownOptions": {
       "remarkPlugins": [
+        "remark-footnotes",
+        "@silvenon/remark-smartypants",
+        "remark-unwrap-images",
+        "remark-gfm",
         "remark-code-titles",
-        "remark-slug",
-        [
-          "remark-autolink-headings",
-          {
-            "behavior": "prepend"
-          }
-        ]
+        "remark-slug"
       ],
       "rehypePlugins": [
         [
-          "rehype-toc",
+          "rehype-add-classes",
           {
-            "headings": [
-              "h3",
-              "h4"
-            ]
+            "h1,h2,h3,h4,h5,h6": "title"
           }
         ],
         [
-          "rehype-add-classes",
+          "rehype-autolink-headings",
           {
-            "h1,h2,h3": "title"
+            "behavior": "prepend"
           }
         ]
       ]
