--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,10 @@
     "@changesets/cli": "^2.17.0",
     "@popmotion/popcorn": "^0.4.4",
     "@silvenon/remark-smartypants": "^1.0.0",
+    "@stefanprobst/remark-shiki": "^2.0.1",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
-    "astro": "^0.20.3",
+    "astro": "^0.20.6",
     "canvas": "^2.8.0",
     "cheerio": "^1.0.0-rc.10",
     "css-select": "^4.1.3",
@@ -34,12 +35,16 @@
     "react-router-dom": "^5.2.0",
     "rehype-add-classes": "^1.0.0",
     "rehype-autolink-headings": "^6.1.0",
+    "rehype-prism": "^1.0.0",
+    "rehype-shiki": "^0.0.9",
     "rehype-toc": "^3.0.2",
     "remark-autolink-headings": "^7.0.1",
     "remark-code-titles": "^0.1.2",
     "remark-gfm": "^2.0.0",
+    "remark-prism": "^1.3.6",
     "remark-slug": "^7.0.0",
     "remark-unwrap-images": "^3.0.0",
+    "shiki": "^0.9.11",
     "slugify": "^1.6.0",
     "typanion": "^3.3.2"
   },
