--- a/web/package.json
+++ b/web/package.json
@@ -67,6 +67,7 @@
     "typescript": "^4.4.2",
     "use-between": "^0.0.18",
     "uvu": "^0.5.1",
+    "video.js": "^5.20.4",
     "webpack-env": "^0.8.0"
   },
   "_moduleAliases": {
