--- a/web/package.json
+++ b/web/package.json
@@ -26,11 +26,15 @@
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
+    "html-react-parser": "^1.3.0",
+    "htmr": "^1.0.1",
     "leva": "^0.9.13",
     "module-alias": "^2.2.2",
     "popmotion": "^10.0.1",
     "react": "17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
     "rehype-add-classes": "^1.0.0",
@@ -46,7 +50,8 @@
     "remark-unwrap-images": "^3.0.0",
     "shiki": "^0.9.11",
     "slugify": "^1.6.0",
-    "typanion": "^3.3.2"
+    "typanion": "^3.3.2",
+    "video.js": "^5.20.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -67,8 +72,13 @@
     "typescript": "^4.4.2",
     "use-between": "^0.0.18",
     "uvu": "^0.5.1",
-    "video.js": "^5.20.4",
     "webpack-env": "^0.8.0"
+  },
+  "peerDependencies": {
+    "global": "4.4.0"
+  },
+  "resolutions": {
+    "global": "4.4.0"
   },
   "_moduleAliases": {
     "~": "./src"
