--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "react-error-boundary": "^3.1.3",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
+    "react-use": "^17.3.1",
     "rehype-add-classes": "^1.0.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-prism": "^1.0.0",
@@ -50,7 +51,9 @@
     "remark-unwrap-images": "^3.0.0",
     "shiki": "^0.9.11",
     "slugify": "^1.6.0",
+    "two.js": "^0.7.1",
     "typanion": "^3.3.2",
+    "util-inspect": "^0.1.8",
     "video.js": "^5.20.4"
   },
   "devDependencies": {
@@ -66,6 +69,7 @@
     "esbuild-register": "^3.0.0",
     "faker": "^5.5.3",
     "jsdom": "^17.0.0",
+    "prettier": "prettier/prettier",
     "react-intersection-observer": "^8.32.1",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
