--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "description": "",
   "private": true,
-  "workspaces": [
-    "web",
-    "apollo"
-  ],
+  "workspaces": {
+    "packages": [
+      "web",
+      "apollo"
+    ],
+    "nohoist": [
+      "web/esbuild-register"
+    ]
+  },
   "scripts": {
     "test": "echo ok && exit 0",
     "version": "changeset version"
