--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "debug": "DEBUG=* astro dev",
-    "test": "uvu -r esbuild-register -r tests/setup/register ",
+    "test": "uvu -r ./node_modules/esbuild-register -r tests/setup/register ",
     "devtest": "watchexec -w src npm test",
     "graphql": "cd apollo; npm start;",
     "storybook": "start-storybook -p 6006",
@@ -76,7 +76,8 @@
     "typescript": "^4.4.2",
     "use-between": "^0.0.18",
     "uvu": "^0.5.1",
-    "webpack-env": "^0.8.0"
+    "webpack-env": "^0.8.0",
+    "esbuild-register": "^3.0.0"
   },
   "peerDependencies": {
     "global": "4.4.0"
