--- a/web/.vscode/launch.json
+++ b/web/.vscode/launch.json
@@ -2,15 +2,20 @@
   "version": "0.1.0",
   "configurations": [
     {
-      "type": "chrome",
-      "request": "attach",
-      "name": "Browser Preview: Attach"
+      "type": "pwa-chrome",
+      "request": "launch",
+      "name": "Browser: Launch",
+      "url": "http://localhost:3000",
+      "port": 9222,
+      "webroot": "${workspaceRoot}/web/src"
     },
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Browser Preview: Launch",
-      "url": "http://localhost:3000"
+      "name": "Browser: Launch",
+      "url": "http://localhost:3000",
+      "port": 9222,
+      "webroot": "${workspaceRoot}/web/src"
     }
   ]
 }
