--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "remark-code-titles": "^0.1.2",
     "remark-gfm": "^2.0.0",
     "remark-prism": "^1.3.6",
+    "remark-responsive-tables": "h-shams/remark-responsive-tables#fix-mobile-layout",
     "remark-slug": "^7.0.0",
     "remark-unwrap-images": "^3.0.0",
     "shiki": "^0.9.11",
@@ -76,8 +77,7 @@
     "typescript": "^4.4.2",
     "use-between": "^0.0.18",
     "uvu": "^0.5.1",
-    "webpack-env": "^0.8.0",
-    "esbuild-register": "^3.0.0"
+    "webpack-env": "^0.8.0"
   },
   "peerDependencies": {
     "global": "4.4.0"
@@ -107,7 +107,19 @@
         "remark-unwrap-images",
         "remark-gfm",
         "remark-code-titles",
-        "remark-slug"
+        "remark-slug",
+        [
+          "remark-responsive-tables",
+          {
+            "classnames": {
+              "title": "tableTitle",
+              "description": "tableDescription",
+              "content": "tableContent",
+              "mobile": "mobile",
+              "desktop": "desktop"
+            }
+          }
+        ]
       ],
       "rehypePlugins": [
         [
