--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@changesets/cli": "^2.17.0",
     "@popmotion/popcorn": "^0.4.4",
+    "@radix-ui/react-icons": "^1.0.3",
+    "@radix-ui/react-popover": "^0.1.0",
+    "@radix-ui/react-toolbar": "^0.1.0",
     "@silvenon/remark-smartypants": "^1.0.0",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
@@ -29,6 +32,7 @@
     "html-react-parser": "^1.3.0",
     "htmr": "^1.0.1",
     "leva": "^0.9.13",
+    "lodash.debounce": "^4.0.8",
     "module-alias": "^2.2.2",
     "popmotion": "^10.0.1",
     "react": "17.0.2",
@@ -37,6 +41,7 @@
     "react-error-boundary": "^3.1.3",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
+    "react-simple-code-editor": "^0.11.0",
     "react-use": "^17.3.1",
     "rehype-add-classes": "^1.0.0",
     "rehype-autolink-headings": "^6.1.0",
