--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-popover": "^0.1.0",
     "@radix-ui/react-toolbar": "^0.1.0",
     "@radix-ui/react-tooltip": "^0.1.0",
+    "@rehooks/window-scroll-position": "^1.0.1",
     "@silvenon/remark-smartypants": "^1.0.0",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
@@ -38,6 +39,7 @@
     "popmotion": "^10.0.1",
     "react": "17.0.2",
     "react-content-loader": "^6.0.3",
+    "react-cool-inview": "^2.0.7",
     "react-dom": "17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-lorem-ipsum": "^1.4.9",
