Finished port to Astro 0.21 🤩

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -10,18 +10,20 @@
     "module": "CommonJS",
     "jsx": "react-jsx",
     "lib": [
-      "dom",
-      "es2015"
+      "DOM",
+      "DOM.Iterable",
+      "esnext"
     ],
-    "target": "es5",
+    "target": "ESnext",
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "downlevelIteration": true,
+    "useDefineForClassFields": true,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
     "forceConsistentCasingInFileNames": true,
+    "strict": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
