--- a/web/package.json
+++ b/web/package.json
@@ -2,12 +2,13 @@
   "name": "@vical/web",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "version": "changeset version",
-    "dev": "astro dev",
+    "dev": "astro dev ",
     "build": "astro build",
-    "debug": "DEBUG=* astro dev",
-    "test": "uvu -r ./node_modules/esbuild-register -r tests/setup/register ",
+    "preview": "astro preview",
+    "test": "uvu -r tsm -r tests/setup/register ",
     "devtest": "watchexec -w src npm test",
     "graphql": "cd apollo; npm start;",
     "storybook": "start-storybook -p 6006",
@@ -24,7 +25,7 @@
     "@silvenon/remark-smartypants": "^1.0.0",
     "@types/chai": "^4.2.21",
     "@types/sinon": "^10.0.2",
-    "astro": "^0.20.6",
+    "astro": "^0.21.0",
     "canvas": "^2.8.0",
     "cheerio": "^1.0.0-rc.10",
     "css-select": "^4.1.3",
@@ -37,6 +38,7 @@
     "lodash.debounce": "^4.0.8",
     "module-alias": "^2.2.2",
     "popmotion": "^10.0.1",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-content-loader": "^6.0.3",
     "react-cool-inview": "^2.0.7",
@@ -60,6 +62,7 @@
     "remark-unwrap-images": "^3.0.0",
     "shiki": "^0.9.11",
     "slugify": "^1.6.0",
+    "supports-esm": "^1.0.0",
     "two.js": "0.7.1",
     "typanion": "^3.3.2",
     "util-inspect": "^0.1.8",
@@ -75,13 +78,15 @@
     "chai": "^4.3.4",
     "css-modules-require-hook": "^4.2.3",
     "esbuild": "^0.13.2",
-    "esbuild-register": "^3.0.0",
+    "esbuild-register": "^3.2.0",
     "faker": "^5.5.3",
     "jsdom": "^17.0.0",
     "prettier": "prettier/prettier",
+    "prettier-plugin-astro": "^0.0.11",
     "react-intersection-observer": "^8.32.1",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
+    "tsm": "^2.2.1",
     "typescript": "^4.4.2",
     "use-between": "^0.0.18",
     "uvu": "^0.5.1",
@@ -96,53 +101,7 @@
   "_moduleAliases": {
     "~": "./src"
   },
-  "_astroConfig": {
-    "projectRoot": ".",
-    "pages": "./src/pages",
-    "dist": "./dist",
-    "buildOptions": {
-      "site": "http://vical.me",
-      "sitemap": true
-    },
-    "devOptions": {},
-    "renderers": [
-      "@astrojs/renderer-react"
-    ],
-    "markdownOptions": {
-      "remarkPlugins": [
-        "remark-footnotes",
-        "@silvenon/remark-smartypants",
-        "remark-unwrap-images",
-        "remark-gfm",
-        "remark-code-titles",
-        "remark-slug",
-        [
-          "remark-responsive-tables",
-          {
-            "classnames": {
-              "title": "tableTitle",
-              "description": "tableDescription",
-              "content": "tableContent",
-              "mobile": "mobile",
-              "desktop": "desktop"
-            }
-          }
-        ]
-      ],
-      "rehypePlugins": [
-        [
-          "rehype-add-classes",
-          {
-            "h1,h2,h3,h4,h5,h6": "title"
-          }
-        ],
-        [
-          "rehype-autolink-headings",
-          {
-            "behavior": "prepend"
-          }
-        ]
-      ]
-    }
+  "astroConfig": {
+    "pages": "./src/pages"
   }
 }
