--- a/web/package.json
+++ b/web/package.json
@@ -66,7 +66,8 @@
     "two.js": "0.7.1",
     "typanion": "^3.3.2",
     "util-inspect": "^0.1.8",
-    "video.js": "^5.20.4"
+    "video.js": "^5.20.4",
+    "vite-plugin-remote-assets": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
