chore: Removed apollo graphql
Removed graphql from project

BREAKING CHANGE:

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "web",
-      "apollo"
+      "web"
     ],
     "nohoist": [
       "**/esbuild-register",
