--- a/app/package.json
+++ b/app/package.json
@@ -1,25 +1,37 @@
 {
   "private": true,
-  "name": "remix-app-template",
+  "name": "vical-app",
+  "version": "0.0.1",
   "description": "",
   "license": "",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "test": "ts-mocha"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
+    "@types/mocha": "^9.0.0",
+    "front-matter": "^4.0.2",
+    "mocha": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
-    "@remix-run/serve": "^1.1.1"
+    "ts-node": "^10.4.0",
+    "typanion": "^3.7.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "chai": "^4.3.4",
+    "ts-mocha": "^8.0.0",
+    "type-fest": "^2.9.0",
     "typescript": "^4.1.2"
   },
   "engines": {
