--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
