--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -34,7 +34,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install Dependencies
-        run: cd web && yarn
+        run: cd app && yarn install --frozen-lockfile
 
       - name: Run UT
         run: cd app && yarn test
