--- a/app/package.json
+++ b/app/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
+    "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "postinstall": "remix setup node",
     "start": "remix-serve build",
     "test": "ts-mocha"
   },
   "dependencies": {
+    "@netlify/functions": "^0.10.0",
+    "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@types/mocha": "^9.0.0",
