--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
+    "@types/chai": "^4.3.0",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.24",
