--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@types/mocha": "^9.0.0",
+    "esbuild": "^0.14.11",
+    "mdx-bundler": "^8.0.1",
     "mocha": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
