Fixes versioning of changeset

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "vical-app",
+  "name": "@vical/app",
   "version": "0.0.1",
   "description": "",
   "license": "",
