--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "@vical/app",
   "version": "0.0.2",
   "description": "",
@@ -44,5 +44,8 @@
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
