--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,10 @@
   "description": "",
   "license": "",
   "scripts": {
+    "bump": "cd ../ && yarn changeset tag",
+    "build:backup": "mkdir -p backup && cp -r netlify/functions/server public/build backup/",
+    "build:clean": "rm -rf netlify/functions/server/build public/build",
+    "prebuild": "npm run bump",
     "build": "remix build",
     "dev": "remix dev",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
@@ -21,6 +25,7 @@
     "@remix-run/serve": "^1.1.1",
     "@types/mocha": "^9.0.0",
     "esbuild": "^0.14.11",
+    "htmr": "^1.0.1",
     "mdx-bundler": "^8.0.1",
     "mocha": "^9.1.3",
     "react": "^17.0.2",
