Feat: Render with markdown

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -14,8 +14,12 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "types": ["node", "mocha", "chai"],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
