--- a/app/package.json
+++ b/app/package.json
@@ -16,21 +16,27 @@
     "postdeploy": "netlify deploy",
     "postinstall": "remix setup node",
     "start": "remix-serve build",
-    "test": "ts-mocha"
+    "test": "ts-mocha --paths"
   },
   "dependencies": {
     "@netlify/functions": "^0.10.0",
     "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
+    "chai-as-promised": "^7.1.1",
     "esbuild": "^0.14.11",
+    "front-matter": "^4.0.2",
     "htmr": "^1.0.1",
     "mdx-bundler": "^8.0.1",
     "mocha": "^9.1.3",
+    "npm": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
+    "should": "^13.2.3",
+    "totalist": "^2.0.0",
     "ts-node": "^10.4.0",
     "typanion": "^3.7.1"
   },
