--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,23 +1,34 @@
 {
   "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "strict": true,
+    "target": "ES2019",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "useUnknownInCatchVariables": true,
+    "noImplicitReturns": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "target": "ES2019",
-    "strict": true,
+
+    // Remix takes care of building everything in `remix build`.
+    "noEmit": true,
+
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+
+    "typeRoots": ["./types"],
+    "types": ["mocha"],
+
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
-    },
-    "types": ["node", "mocha", "chai"],
-
-    // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    }
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
