--- a/app/package.json
+++ b/app/package.json
@@ -1,25 +1,30 @@
 {
   "private": false,
   "name": "@vical/app",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "license": "",
   "scripts": {
     "bump": "cd ../ && yarn changeset tag",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
     "build:backup": "mkdir -p backup && cp -r netlify/functions/server public/build backup/",
     "build:clean": "rm -rf netlify/functions/server/build public/build",
     "prebuild": "npm run bump",
     "build": "remix build",
     "dev": "remix dev",
+    "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "deploy": "npm run build",
     "postdeploy": "netlify deploy",
-    "postinstall": "remix setup node",
+    "postinstall": "remix setup",
     "start": "remix-serve build",
+    "softtest": "mocha **/*.spec.js",
     "test": "ts-mocha --parallel --paths --exit -r source-map-support/register",
     "test:e2e": "ts-mocha --paths --exit -r source-map-support/register ./tests/**.ts -f e2e"
   },
   "dependencies": {
+    "@appland/appmap": "^3.15.1",
+    "@appland/appmap-agent-js": "^9.4.0",
     "@netlify/functions": "^0.10.0",
     "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
@@ -27,6 +32,8 @@
     "@types/chai-as-promised": "^7.1.4",
     "@types/jest-image-snapshot": "^4.3.1",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.10",
+    "autoprefixer": "^10.4.2",
     "chai-as-promised": "^7.1.1",
     "chai-image": "^3.0.0",
     "esbuild": "^0.14.11",
@@ -40,6 +47,11 @@
     "mocha-chai-jest-snapshot": "^1.1.3",
     "npm": "^8.3.1",
     "open-props": "^1.1.3",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
+    "postcss-modules": "^4.3.0",
+    "postcss-preset-env": "^7.2.3",
     "puppeteer": "^13.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,6 +63,7 @@
     "typanion": "^3.7.1"
   },
   "devDependencies": {
+    "@appland/appmap-agent-js": "^9.4.0",
     "@remix-run/dev": "^1.1.1",
     "@types/chai": "^4.3.0",
     "@types/expect": "^24.3.0",
