--- a/app/package.json
+++ b/app/package.json
@@ -6,14 +6,18 @@
   "license": "",
   "scripts": {
     "bump": "cd ../ && yarn changeset tag",
+    "build:sw": "NODE_ENV=production rollup -c",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "build:backup": "mkdir -p backup && cp -r netlify/functions/server public/build backup/",
     "build:clean": "rm -rf netlify/functions/server/build public/build",
     "prebuild": "npm run bump",
     "build": "remix build",
+    "postbuild": "npm run build:sw && npm run build:css",
     "dev": "remix dev",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
+    "dev:sw": "rollup -c --watch",
+    "predev": "npm run dev:sw &",
     "deploy": "npm run build",
     "postdeploy": "netlify deploy",
     "postinstall": "remix setup",
@@ -27,13 +31,18 @@
     "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
     "@types/chai-as-promised": "^7.1.4",
     "@types/jest-image-snapshot": "^4.3.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.10",
+    "@types/service_worker_api": "^0.0.9",
     "autoprefixer": "^10.4.2",
     "chai-as-promised": "^7.1.1",
     "chai-image": "^3.0.0",
+    "custom-media": "^1.0.0",
     "esbuild": "^0.14.11",
     "expect": "^27.4.6",
     "expect-mocha-image-snapshot": "^2.0.14",
@@ -47,6 +56,7 @@
     "open-props": "^1.1.3",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "postcss-custom-media": "^8.0.0",
     "postcss-import": "^14.0.2",
     "postcss-modules": "^4.3.0",
     "postcss-preset-env": "^7.2.3",
@@ -54,11 +64,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
+    "rollup": "^2.66.1",
     "should": "^13.2.3",
     "source-map-support": "^0.5.21",
     "totalist": "^2.0.0",
     "ts-node": "^10.4.0",
-    "typanion": "^3.7.1"
+    "typanion": "^3.7.1",
+    "workbox": "^0.0.0",
+    "workbox-cacheable-response": "^6.4.2",
+    "workbox-expiration": "^6.4.2",
+    "workbox-routing": "^6.4.2",
+    "workbox-strategies": "^6.4.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
