feat: Add support for feature flags under environment variables and window.ENV

--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "prebuild": "npm run bump",
     "build": "remix build",
     "postbuild": "npm run build:sw && npm run",
-    "dev": "remix dev",
+    "dev": "node -r dotenv/config node_modules/.bin/remix dev",
     "dev:css": "npm run build:css",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "dev:sw": "rollup -c --watch",
@@ -45,6 +45,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-image": "^3.0.0",
     "custom-media": "^1.0.0",
+    "dotenv": "^14.3.1",
     "esbuild": "^0.14.11",
     "expect": "^27.4.6",
     "expect-mocha-image-snapshot": "^2.0.14",
