--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "bump": "cd ../ && yarn changeset tag",
     "build:sw": "NODE_ENV=production rollup -c",
-    "build:css": "cp app/styles/**/*.css public/build/_assets",
+    "build:css": "postcss app/**/*.pcss --map --watch --base app --dir app --ext css ",
+    "build:css:copy": "cp app/styles/**/*.css public/build/_assets",
     "build:backup": "mkdir -p backup && cp -r netlify/functions/server public/build backup/",
     "build:clean": "rm -rf netlify/functions/server/build public/build",
     "prebuild": "npm run bump",
@@ -17,7 +18,7 @@
     "dev:css": "npm run build:css",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "dev:sw": "rollup -c --watch",
-    "predev": "npm run dev:sw &",
+    "ppredev": "npm run dev:sw &",
     "deploy": "npm run build",
     "postdeploy": "netlify deploy",
     "postinstall": "remix setup",
@@ -30,6 +31,7 @@
     "@microsoft/api-documenter": "^7.15.1",
     "@microsoft/api-extractor": "^7.19.4",
     "@netlify/functions": "^0.10.0",
+    "@node-loader/postcss": "^2.0.0",
     "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
@@ -62,10 +64,15 @@
     "postcss-custom-media": "^8.0.0",
     "postcss-import": "^14.0.2",
     "postcss-modules": "^4.3.0",
+    "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.2.3",
     "puppeteer": "^13.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-highlight": "^5.0.2",
+    "remark": "13",
+    "remark-gfm": "2.0",
+    "remark-html": "13",
     "remix": "^1.1.1",
     "rollup": "^2.66.1",
     "should": "^13.2.3",
