Feat: Added tag component and UT

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "strict": true,
     "target": "ES2019",
+    "allowJs": true,
+    "checkJs": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
