--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,7 @@
     "postinstall": "remix setup",
     "start": "remix-serve build",
     "softtest": "mocha **/*.spec.js",
-    "test": "ts-mocha --parallel --paths --exit -r source-map-support/register",
+    "test": "ts-mocha --parallel --paths --exit -r source-map-support/register -r tests/setup/register ",
     "test:e2e": "ts-mocha --paths --exit -r source-map-support/register ./tests/**.ts -f e2e"
   },
   "dependencies": {
@@ -40,12 +40,14 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@types/chai-as-promised": "^7.1.4",
     "@types/jest-image-snapshot": "^4.3.1",
+    "@types/jsdom": "^16.2.14",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.10",
     "@types/service_worker_api": "^0.0.9",
     "autoprefixer": "^10.4.2",
     "chai-as-promised": "^7.1.1",
     "chai-image": "^3.0.0",
+    "css-modules-require-hook": "^4.2.3",
     "custom-media": "^1.0.0",
     "dotenv": "^14.3.1",
     "esbuild": "^0.14.11",
@@ -54,6 +56,7 @@
     "front-matter": "^4.0.2",
     "htmr": "^1.0.1",
     "jest-image-snapshot": "^4.5.1",
+    "jsdom": "^19.0.0",
     "mdx-bundler": "^8.0.1",
     "mocha": "^9.1.4",
     "mocha-chai-jest-snapshot": "^1.1.3",
