--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "custom-media": "^1.0.0",
     "dotenv": "^14.3.1",
     "esbuild": "^0.14.11",
+    "esbuild-plugin-alias": "^0.2.1",
     "expect": "^27.4.6",
     "expect-mocha-image-snapshot": "^2.0.14",
     "front-matter": "^4.0.2",
